build: update dependency handling
Rework the dependency handling and use the new meson features to
properly version by major-number (required because meson does not
support semver) and hook into the dependency handling of dependent
projects.

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -13,10 +13,10 @@ if not meson.is_subproject()
         install_headers('c-stdaux.h')
 
         mod_pkgconfig.generate(
-                version: meson.project_version(),
-                name: 'libcstdaux',
-                filebase: 'libcstdaux',
                 description: project_description,
+                filebase: 'libcstdaux-'+major,
+                name: 'libcstdaux',
+                version: meson.project_version(),
         )
 endif
 
