--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,18 @@
 project(
         'c-stdaux',
         'c',
-        version: '1',
-        license: 'Apache',
         default_options: [
                 'c_std=c11'
         ],
+        license: 'Apache',
+        version: '1.0.0',
 )
+major = meson.project_version().split('.')[0]
 project_description = 'Auxiliary macros and functions for the C standard library'
 
 add_project_arguments('-D_GNU_SOURCE', language: 'c')
 mod_pkgconfig = import('pkgconfig')
 
 subdir('src')
+
+meson.override_dependency('libcstdaux-'+major, libcstdaux_dep, static: true)
