ci: try out new cabuild workflow
Try the new CABuild CI workflow and see whether we can use it to
parallelize the CI jobs and simplify the infrastructure.

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,10 @@ jobs:
       with:
         m32: 1
         valgrind: 1
+
+  ci-test:
+    uses: bus1/cabuild/.github/workflows/ci-c-util.yml@main
+    with:
+      cabuild_ref: "main"
+      m32: true
+      valgrind: true
