ci: use v1 of cabuild
Use the v1 branch of cabuild to avoid random breakage when new features
are developed.

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   ci:
     name: CI with Default Configuration
-    uses: bus1/cabuild/.github/workflows/ci-c-util.yml@main
+    uses: bus1/cabuild/.github/workflows/ci-c-util.yml@v1
     with:
-      cabuild_ref: "main"
+      cabuild_ref: "v1"
       m32: true
       matrixmode: true
       valgrind: true
