build: export cflags via pkg-config
Export the cflags variable via pkg-config, so dependencies can access
it even if linked via pkg-config rather than direct meson subprojects.

Reported-by: Dominik Xaver Hörl
Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -17,6 +17,7 @@ if not meson.is_subproject()
                 description: project_description,
                 filebase: 'libcstdaux-'+major,
                 name: 'libcstdaux',
+                unescaped_variables: { 'cflags': ' '.join(cflags) },
                 version: meson.project_version(),
         )
 endif
