--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,8 @@ jobs:
       cabuild_ref: "v1"
       linux: false
       macos: true
+  ci-docs:
+    name: Documentation CI
+    uses: bus1/cabuild/.github/workflows/ci-sphinx.yml@main
+    with:
+      source: "./src/docs"
