build: use v1 ci-sphinx
Use the stable branch of the sphinx CI workflow, now that it is
available.

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
       macos: true
   ci-docs:
     name: Documentation CI
-    uses: bus1/cabuild/.github/workflows/ci-sphinx.yml@main
+    uses: bus1/cabuild/.github/workflows/ci-sphinx.yml@v1
     with:
       source: "./src/docs"
