--- a/src/meson.build
+++ b/src/meson.build
@@ -19,6 +19,7 @@ if not meson.is_subproject()
         install_headers(
                 'c-stdaux.h',
                 'c-stdaux-generic.h',
+                'c-stdaux-gnuc.h',
                 'c-stdaux-unix.h',
         )
 
