build: avoid dashes in pkg-config variables
Avoid dashes in pkg-config variables. While there is no clear
specification for pkg-config `pc` files, all implementations limit
variable-names to standard identifier character classes.

Reported-by: Adrian Vovk <adrianvovk@gmail.com>
Signed-off-by: David Rheinsberg <david@readahead.eu>

--- a/src/meson.build
+++ b/src/meson.build
@@ -6,7 +6,9 @@
 
 libcstdaux_vars = {
         'cflags': ' '.join(cflags),
+        # Deprecated: pkg-config does not support dashes in variable names.
         'version-scripts': use_version_scripts,
+        'version_scripts': use_version_scripts,
 }
 
 libcstdaux_dep = declare_dependency(
