--- a/src/docs/.readthedocs.yaml
+++ b/src/docs/.readthedocs.yaml
@@ -4,10 +4,13 @@ version: 2
 
 build:
   apt_packages:
-  - "clang"
+  - "libclang-14-dev"
   os: "ubuntu-lts-latest"
   tools:
     python: "3"
+  jobs:
+    post_install:
+      - python -m pip install --upgrade --no-cache-dir clang==14.0.6
 
 formats: "all"
 
